issue with horizontal scroll bar solved

--- a/css/index.css
+++ b/css/index.css
@@ -15,18 +15,19 @@ body {
 .nav-text {
 
     font-size: 20px;
-   
+
     height: 50px;
     width: 100px;
     text-align: center;
     padding-top: 10px;
-    
+
 }
 
 .nav-text:hover {
     font-size: 22px;
 }
-.nav-anchor{
+
+.nav-anchor {
     text-decoration: none;
     color: black;
 }
@@ -41,23 +42,25 @@ body {
     background-color: #FAEED1;
     padding: 10px;
 }
-.container:hover{
+
+.container:hover {
     overflow-y: auto;
 }
 
 
 .container-text {
     font-size: 20px;
- 
+
 }
+
 
 .card-set {
     display: flex;
-
-    justify-content: space-around;
-    height: 220px;
+    overflow-x: auto;
+    overflow-y: hidden;
 
 }
+
 
 .card {
     height: 180px;
@@ -66,17 +69,18 @@ body {
     margin-top: 10px;
     padding: 10px;
     border-radius: 5px;
-    
+
 
 }
-.card:hover .img{
-   height:  72px ;
+
+.card:hover .img {
+    height: 72px;
 }
 
 .img {
     height: 70px;
     padding: 10px;
-  
+
     border-radius: 19px;
 }
 
@@ -99,20 +103,24 @@ body {
     text-align: justify;
 
 }
-.btn{
+
+.btn {
     margin-left: 340px;
     border-radius: 30px;
-   background-color: #009900;
-   height: 30px;
-   width: 90px;
+    background-color: #009900;
+    height: 30px;
+    width: 90px;
 
 }
-.btn:active{height: 29px;
+
+.btn:active {
+    height: 29px;
     width: 89px;
 
     background-color: #006600;
 
 }
+
 .categories {
     display: flex;
     justify-content: space-around;
@@ -145,115 +153,126 @@ body {
 
     color: black;
 }
+
 @media screen and (max-width: 600px) {
-    
-    
-    .nav-text{
+
+
+    .nav-text {
         font-size: 15px;
-   
+
         height: 20px;
         width: 60px;
 
     }
+
     .nav-text:hover {
         font-size: 17px;
     }
+
     .container {
         height: fit-content;
         background-color: #FAEED1;
         padding: 7px;
- 
+
     }
+
     .card {
         height: 130px;
         width: 350px;
-       
+
         margin-top: 7px;
         padding: 3px;
-     
-        
-    
+        z
     }
-    .card:hover .img{
-       height:  62px ;
+
+    .card:hover .img {
+        height: 62px;
     }
-    
+
     .img {
         height: 60px;
         padding: 10px;
-      
+
         border-radius: 19px;
     }
 
-    
+
     .big-description {
-      
-    
+
+
         font-size: 15px;
         padding-left: 3px;
     }
-    
+
     .small-description {
         font-size: 10px;
         padding: 2px;
-      
-    
+
+
     }
-    .btn{
-        
+
+    .btn {
+
         margin-left: 200px;
         border-radius: 30px;
-      
-       height: 20px;
-       width: 70px;
-       position: relative;
-       bottom: 10px;
-    
+
+        height: 20px;
+        width: 70px;
+        position: relative;
+        bottom: 10px;
+
     }
-    .btn:active{
+
+    .btn:active {
         height: 19px;
         width: 69px;
-    
+
     }
-    
+
 
     .categoty-img {
-        
-        height:60px;
-    
+
+        height: 60px;
+
     }
-    
+
     .categoty-img:hover {
-      
+
         height: 61px;
-    
+
     }
-    .page-name{
+
+    .page-name {
         font-size: 10px;
     }
 
 
-}                                
+}
+
 @media screen and (min-width: 600px) and (max-width: 845px) {
-    
+
 
     .categoty-img {
-        
-        height:80px;
-    
+
+        height: 80px;
+
     }
-    
+
     .categoty-img:hover {
-      
+
         height: 61px;
-    
+
     }
-    .page-name{
+
+    .page-name {
         font-size: 12px;
     }
 
 
 }
+
 @media screen and (min-width: 846px) and (max-width: 992px) {}
+
 @media screen and (min-width: 993px) and (max-width: 1200px) {}
-@media screen and (min-width: 1201px){}
+
+@media screen and (min-width: 1201px) {}
